# lab_08.1_string

./: CMakeLists.txt
include/: main.h
src/: h.cpp  main.cpp
tests/: test_h.cpp
